--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="testBowling/src"/>
+	<classpathentry kind="src" path="testBowling/test"/>
+	<classpathentry excluding="src/|test/|src/|test/" kind="src" path="testBowling"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
